# protogen

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: config.rs  gen.rs  lib.rs  main.rs  protoc.rs  walk.rs
src/protoc/: compiler.rs  github.rs  layout.rs  provider.rs
src/protoc/compiler/: go.rs  plain.rs
src/protoc/provider/: github.rs
src/walk/: deep.rs  direct.rs  directory.rs
