[package]
name = "protogen"
version = "0.1.0"
authors = ["Igor Nikitin <rabbitinspace@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_yaml = "0.8.11"
semver = { version = "0.9.0", features = ["serde"] }
directories = "2.0.2"
reqwest = "0.9.22"
regex = "1.3.1"
zip = { version = "0.5.3", features = ["deflate"] }
