[package]
name = "protogen"
version = "0.1.0"
authors = ["Igor Nikitin <rabbitinspace@icloud.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.3"
failure = "0.1.6"
exitfailure = "0.5.1"

serde = { version = "1.0.102", features = ["derive"] }
toml = "0.5.5"
semver = { version = "0.9.0", features = ["serde"] }
directories = "2.0.2"
reqwest = "0.9.22"
regex = "1.3.1"
zip = { version = "0.5.3", features = ["deflate"] }
